<?xml version="1.0"?>
<package format="2">
  <name>ouster_slam</name>
  <version>0.0.1</version>
  <description>The ouster_slam package integrates cartographer and ouster sensor.</description>

  <maintainer email="miroslav.jascur@tuke.sk">miro</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>ros-melodic-cartographer-ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>ros-melodic-cartographer-rviz</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
